Start to desing GUI and route to Log in and sign up

--- a/src/views/login.html
+++ b/src/views/login.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UN Wallet</title>
+    <title>Log in for UN Wallet</title>
 </head>
 <body>
     <h1>
-        UN Wallet
-    </h1>
+        <%= title %>
+    </h1>   
 </body>
 </html>
