Fields for Log in and Sign up

--- a/src/views/login.html
+++ b/src/views/login.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log in for UN Wallet</title>
+    <%- include('partials/head.html'); %>
 </head>
 <body>
     <h1>
         <%= title %>
-    </h1>   
+    </h1>
+    <div class="container" heigh="200px">
+        <form>
+            <div class="form-group">
+                <label for="inputEmail">Email address</label>
+                <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
 </body>
 </html>
