--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,27 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UN Wallet</title>
-    <!-- Boostrap Framework -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    <%- include('partials/head.html'); %>
 </head>
+
 <body>
-    <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand"><%= title %></a>
-        <form class="form-inline">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-    </nav>
+    <%- include('partials/navigation.html'); %>
 
     <nav>
         <ul>
-            <li><a href="/login">
-                    <button type="button" class="btn btn-light">Log in</button>
-                </a></li>
-            <li><a href="/signup">
-                    <button type="button" class="btn btn-light">Sign up</button>
-                </a></li>
+            <div>
+                <li><a href="/login">
+                        <button type="button" class="btn btn-light">Log in</button>
+                    </a></li>
+            </div>
+            <div>
+                <li><a href="/signup">
+                        <button type="button" class="btn btn-light">Sign up</button>
+                    </a></li>
+            </div>
         </ul>
     </nav>
 </body>
