--- a/src/views/signup.html
+++ b/src/views/signup.html
@@ -4,10 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up for UN Wallet</title>
+    <%- include('partials/head.html'); %>
 </head>
 <body>
     <h1>
         <%= title %>
     </h1>
+
+    <div class="container" heigh="200px">
+        <form>
+            <div class="form-group">
+                <label for="inputName">Name</label>
+                <input type="name" class="form-control" id="inputName" placeholder="Name">
+            </div>
+            <div class="form-group">
+                <label for="inputLastName">Last Name</label>
+                <input type="lastName" class="form-control" id="inputLastName" placeholder="Last Name">
+            </div>
+            <div class="form-group">
+                <label for="inputEmail">Email</label>
+                <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+            </div>
+            <div class="form-group">
+                <label for="inputPassword">Password</label>
+                <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+            </div>
+            <div class="form-group">
+                <label for="inputPassword">Confirm</label>
+                <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+            </div>
+            <button type="submit" class="btn btn-primary">Sign in</button>
+        </form>
+    </div>
 </body>
 </html>
