--- a/src/views/partials/navigation.html
+++ b/src/views/partials/navigation.html
@@ -1,7 +1,10 @@
-<nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand"><%= title %></a>
-    <form class="form-inline">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button type="submit" class="btn btn-primary">Search</button>
-    </form>
-</nav>
+<div class="col">
+    <h1>
+        <a href="/"><i class="fas fa-wallet"></i> UN Wallet</a>
+        <span class="float-right">
+            <a href="/login" class="btn btn-primary">Log in</a>
+            <a href="/signup" class="btn btn-primary">Sign up</a>
+        </span>
+    </h1>
+</div>
+<hr>
