--- a/src/views/partials/head.html
+++ b/src/views/partials/head.html
@@ -1,2 +1,4 @@
 <!-- Boostrap Framework -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<!-- Font Awesome -->
+<script src="https://kit.fontawesome.com/6e64c61c74.js" crossorigin="anonymous"></script>
