--- a/src/views/signup.html
+++ b/src/views/signup.html
@@ -11,29 +11,29 @@
         <%= title %>
     </h1>
 
-    <div class="container" heigh="200px">
-        <form>
+    <div class="container">
+        <form method="post">
             <div class="form-group">
                 <label for="inputName">Name</label>
-                <input type="name" class="form-control" id="inputName" placeholder="Name">
+                <input name="name" id="inputName" type="text" class="form-control" placeholder="Name" required>
             </div>
             <div class="form-group">
                 <label for="inputLastName">Last Name</label>
-                <input type="lastName" class="form-control" id="inputLastName" placeholder="Last Name">
+                <input name="lastName" id="inputLastName" type="text" class="form-control" placeholder="Last Name" required>
             </div>
             <div class="form-group">
                 <label for="inputEmail">Email</label>
-                <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+                <input name="email" id="inputEmail" type="email" class="form-control" placeholder="Email" required>
             </div>
             <div class="form-group">
                 <label for="inputPassword">Password</label>
-                <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                <input name="password" id="inputPassword" type="password" class="form-control" placeholder="Password" required>
             </div>
             <div class="form-group">
-                <label for="inputPassword">Confirm</label>
-                <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                <label for="confirmPassword">Confirm</label>
+                <input name="confirmPassword" id="confirmPassword" type="password" class="form-control" placeholder="Confirm" required>
             </div>
-            <button type="submit" class="btn btn-primary">Sign in</button>
+            <input type="submit" value="Submit" class="btn btn-primary">
         </form>
     </div>
 </body>
