--- a/src/views/login.html
+++ b/src/views/login.html
@@ -10,20 +10,33 @@
     <h1>
         <%= title %>
     </h1>
-    <div class="container-sm">
-        <form method="post">
-            <div class="form-group">
-                <label for="inputEmail">Email address</label>
-                <input name="email" id="inputEmail" type="email" class="form-control" placeholder="Email" required>
+    <div class="container p-4">
+        <div class="row">
+            <div class="col -md-0 offset-md-0">
+                <div class="card">
+                    <div class="card-header bg-primary text-white text-center">
+                        <h3>
+                            Log in
+                        </h3>
+                    </div>
+                    <div class="card-body">
+                        <form method="post">
+                            <div class="form-group">
+                                <label for="inputEmail">Email address</label>
+                                <input name="email" id="inputEmail" type="email" class="form-control" placeholder="Email" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="inputPassword">Password</label>
+                                <input type="password" class="form-control" id="inputPassword" placeholder="Password" name="password" required>
+                            </div>
+                            <div class="form-group">
+                                <input type="submit" value="Submit" class="btn btn-primary">
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="inputPassword">Password</label>
-                <input type="password" class="form-control" id="inputPassword" placeholder="Password" name="password" required>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Submit" class="btn btn-primary">
-            </div>
-        </form>
+        </div>        
     </div>
 </body>
 </html>
