--- a/src/views/index.html
+++ b/src/views/index.html
@@ -9,5 +9,38 @@
 
 <body>
     <%- include('partials/navigation.html'); %>
+    <br>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <img src="/img/homeimg.jpg" alt="responsive image">      
+            </div>
+            <div class="col">
+                </br>
+                <div class="card">
+                    <div class="card-header bg-primary text-white text-center">
+                        <h3>
+                            Ventajes de tener UN Wallet
+                        </h3>
+                    </div>
+                    <div class="card-body">
+                        <ul>
+                            <li>Facil registro.</li>
+                            <li>Envia y recibe dinero.</li>                 
+                            <li>Regarca tu wallet con PSE.</li>
+                            <li>Ahorra tiempo con UN Wallet</li>
+                            <li>Transacciones rapidas y seguras.</li>
+                            <li>Realiza pagos a comercio y bancos.</li>
+                            <li>Disponibilidad inmediata de tu dinero.</li>                                              
+                            <li>Dinero a la mano sin necesidad de efectivo.</li>                            
+                        </ul>
+                    </div>
+                </div>
+            </div>            
+        </div>
+    </div>
+
+
+    <%- include('partials/footer.html'); %>
 </body>
 </html>
