--- a/src/views/login.html
+++ b/src/views/login.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log in for UN Wallet</title>
-    <%- include('partials/head.html'); %>
+    <%- include('partials/head.html'); %>  
 </head>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+        <div class="col">
+        <h2>
+            <a href="/"><i class="fas fa-wallet"></i> UN Wallet</a>
+        </h2>
+        </div>
+    </div>
+</nav>
 <body>
-    <h1>
-        <%= title %>
-    </h1>
+<br>
     <div class="container p-4">
         <div class="row">
-            <div class="col -md-0 offset-md-0">
-                <div class="card">
+            <div class="col -md-3">
+                <div class="card animated flipInY">
                     <div class="card-header bg-primary text-white text-center">
                         <h3>
                             Log in
@@ -30,13 +37,17 @@
                                 <input type="password" class="form-control" id="inputPassword" placeholder="Password" name="password" required>
                             </div>
                             <div class="form-group">
-                                <input type="submit" value="Submit" class="btn btn-primary">
+                                <br>
+                                <input type="submit" value="Submit" class="btn btn-primary ">
                             </div>
                         </form>
                     </div>
                 </div>
             </div>
         </div>        
-    </div>
+    </div> 
+    <br>           
+    <%- include('partials/footer.html'); %>
+
 </body>
 </html>
