--- a/src/views/partials/navigation.html
+++ b/src/views/partials/navigation.html
@@ -1,10 +1,16 @@
-<div class="col">
-    <h2>
-        <a href="/"><i class="fas fa-wallet"></i> UN Wallet</a>
-        <span class="float-right">
-            <a href="/login" class="btn btn-primary">Log in</a>
-            <a href="/signup" class="btn btn-primary">Sign up</a>
-        </span>
-    </h2>
-</div>
-<hr>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+        <div class="col">
+        <h2>
+            <a href="/"><i class="fas fa-wallet"></i> UN Wallet</a>
+            <span class="float-right">
+                <a href="/login" class="btn btn-primary">Log in</a>
+                <a href="/signup" class="btn btn-primary">Sign up</a>
+            </span>
+        </h2>
+        </div>
+    </div>
+</nav>
+
+
+
