--- a/src/views/signup.html
+++ b/src/views/signup.html
@@ -5,18 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up for UN Wallet</title>
-    <%- include('partials/head.html'); %>
+    <%- include('partials/head.html'); %>    
 </head>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+        <div class="col">
+        <h2>
+            <a href="/"><i class="fas fa-wallet"></i> UN Wallet</a>
+        </h2>
+        </div>
+    </div>
+</nav>
 
 <body>
-    <h1>
-        <%= title %>
-    </h1>
 
     <div class="container p-3">
         <div class="row">
             <div class="col -md-0 offset -md-0">
-                <div class="card">
+                <div class="card animated flipInY">
                     <div class="card-header bg-primary text-white text-center">
                         <h3>
                             Sign up
@@ -63,6 +69,8 @@
             </div>
         </div>
     </div>
+    <%- include('partials/footer.html'); %>
+
 </body>
 
 </html>
