--- a/src/views/login.html
+++ b/src/views/login.html
@@ -38,7 +38,10 @@
                             </div>
                             <div class="form-group">
                                 <br>
-                                <input type="submit" value="Submit" class="btn btn-primary ">
+                                <div style="text-align: center">
+                                    <input type="submit" value="Submit" class="btn btn-primary">
+                                    <input type="button" value="Go Back" onclick="history.back()" class="btn btn-primary">
+                                </div>
                             </div>
                         </form>
                     </div>
