--- a/src/views/signup.html
+++ b/src/views/signup.html
@@ -61,7 +61,10 @@
                                     placeholder="Confirm Pasword" required>
                             </div>
                             <div class="form-group">
-                                <input type="submit" value="Submit" class="btn btn-primary">
+                                <div style="text-align: center">
+                                    <input type="submit" value="Submit" class="btn btn-primary">
+                                    <input type="button" value="Go Back" onclick="history.back()" class="btn btn-primary">
+                                </div>
                             </div>
                         </form>
                     </div>
