--- a/src/views/wallet.html
+++ b/src/views/wallet.html
@@ -5,16 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wallet</title>
     <%- include('partials/head.html')%>
+    <!-- clipboard.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.4/clipboard.min.js"></script>
 </head>
-<body>
-    <div class="col">
-        <h2>
-            <a href="/"><i class="fas fa-wallet"></i> UN Wallet</a>
-            <span class="float-right">
-                <i class="fas fa-user"></i> <%= name + ' ' + lastName %>
-            </span>
-        </h2>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+        <div class="col">
+            <h2 class="text-primary">
+                <a href="/"><i class="fas fa-wallet"></i> UN Wallet</a>
+                <span class="float-right">
+                    <i class="fas fa-user"></i> <%= name + ' ' + lastName %>
+                </span>
+            </h2>
+        </div>
     </div>
-    <hr>
+</nav>
+
+<body>
+    <script type="text/javascript">
+        new ClipboardJS('.btn');
+    </script>
+
+    <br>
+    <div class="container">
+        <div class="row pt-6">
+            <div class="col-md-5">
+                <div class="card animated pulse">
+                    <div class="card border-primary">
+                        <div class="card-header text-primary" id="walletID" data-clipboard-action="copy" data-clipboard-target="#walletID">
+                            <%= wallet_user.id_wallet %>
+                            <span class="float-right">
+                                <button type="button" class="btn btn-primary btn-sm" data-clipboard-action="copy" data-clipboard-target="#walletID">Copy</button>
+                            </span>
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Total balance $<%= wallet_user.balance %></h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
