Improve type_wallet, wallet and user objects and initial GUI in English

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -20,19 +20,19 @@
                 <div class="card">
                     <div class="card-header bg-primary text-white text-center">
                         <h3>
-                            Ventajes de tener UN Wallet
+                            UN wallet advantages
                         </h3>
                     </div>
                     <div class="card-body">
                         <ul>
-                            <li>Facil registro.</li>
-                            <li>Envia y recibe dinero.</li>                 
-                            <li>Regarca tu wallet con PSE.</li>
-                            <li>Ahorra tiempo con UN Wallet</li>
-                            <li>Transacciones rapidas y seguras.</li>
-                            <li>Realiza pagos a comercio y bancos.</li>
-                            <li>Disponibilidad inmediata de tu dinero.</li>                                              
-                            <li>Dinero a la mano sin necesidad de efectivo.</li>                            
+                            <li>Easy registration</li>
+                            <li>Save and recive money</li>                 
+                            <li>Recharge your money</li>
+                            <li>Save time with UNWallet</li>
+                            <li>Fast and secure transactions</li>
+                            <li>Make payments to merchants and banks</li>
+                            <li>mmediate availability of your money</li>                                              
+                            <li>Money on hand without cash</li>                            
                         </ul>
                     </div>
                 </div>
