--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -1,5 +1,10 @@
+
 body{
-   background: #2980B9;  /* fallback for old browsers */
-   background: -webkit-linear-gradient(to top,  #2980B9, #6DD5FA,#FFFFFF);  /* Chrome 10-25, Safari 5.1-6 */
-   background: linear-gradient(to top,  #2980B9, #6DD5FA,#FFFFFF);; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ 
+   background: #2980B9; 
+   background: -webkit-linear-gradient(to top,  #2980B9, #6DD5FA,#FFFFFF);  
+   background: linear-gradient(to top,  #2980B9, #6DD5FA,#FFFFFF);; 
 }
+/*
+body{
+   background: #F4F4F4;  
+}*/
