--- a/src/views/wallet.html
+++ b/src/views/wallet.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wallet</title>
+  
     <%- include('partials/head.html')%>
     <!-- clipboard.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.4/clipboard.min.js"></script>
 </head>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-white">
     <div class="container">
         <div class="col">
             <h2 class="text-primary">
@@ -28,26 +29,66 @@
     </script>
 
     <br>
+    <!--2cards same row -->
     <div class="container">
         <div class="row pt-6">
             <div class="col-md-5">
+                <!--Here start firstcard -->
                 <div class="card animated pulse">
-                    <div class="card border-primary">
-                        <div class="card-header text-primary" id="walletID" data-clipboard-action="copy" data-clipboard-target="#walletID">
+                    <div class="card">
+                        <div class="card-header text-white bg-info" id="walletID" data-clipboard-action="copy" data-clipboard-target="#walletID">
                             <%= wallet_user.id_wallet %>
                             <span class="float-right">
-                                <button type="button" class="btn btn-primary btn-sm" data-clipboard-action="copy" data-clipboard-target="#walletID">Copy</button>
+                                <button type="#" class="btn btn-dark btn-sm" data-clipboard-action="copy" data-clipboard-target="#walletID">Copy</button>
                             </span>
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title">Total balance $<%= wallet_user.balance %></h5>
+                            <h5 class="card-title">History</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
                         </div>
                     </div>
                 </div>
+                <br>
+                <!--Here start second card -->
+                <div class="card">
+                    <h5 class="card-header text-white bg-info ">Make a Transfer</h5>
+                    <div class="card-body">
+                      <h5 class="card-title">Easy and Fast</h5>
+                      <p class="card-text">Seen money card example here we can put 
+                        the max monay that can send a wallet_user attention for type wallet</p>
+                      <a href="#" class="btn btn-dark">Send</a>
+                    </div>
+                  </div>
+            </div>
+
+            <!--second card second row -->
+            <div class="col">
+                <div class="card">
+                    <div class="card-header text-white bg-info">                        
+                            <h5>Transaction history<span class="float-right"><button class="btn btn-dark">Operations</button></h5></span>                                                    
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title"></h5>
+                        <p class="card-text"></p>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+
+                    </div>
+                </div>
             </div>
         </div>
+        <br>
     </div>
+    <%- include('partials/footerwallet.html'); %>
+
 </body>
 </html>
